test/files/res/t687.check

nsc> 
nsc> t687/QueryB.scala:3: error: name clash between defined and inherited member:
method equals:(o: Object)Boolean and
method equals:(x$1: Any)Boolean in class Any
have same type after erasure: (o: Object)Boolean
  override def equals(o : Object) = false;
               ^
